# MendelCell

./: .gitignore  .gitignore.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-app.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: sync-to-huggingface.yml  tests.yml
data/: available_tissues.txt
examples/: example_command.sh  example_gene_list.tsv  validation_cell_line_genes.tsv  validation_immune_genes.tsv  validation_pancreas_genes.tsv
mendelcell/: __init__.py  analysis.py  app.py  cli.py  io.py  report.py
scripts/: build_reference.py
tests/: test_analysis_basic.py  test_analysis_smoke.py
