[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mendelcell"
version = "0.1.0"
description = "Prioritize candidate genes by tissue-specific single-cell expression using HPA data."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Landon Chamberlain"}
]
dependencies = [
  "pandas>=1.5",
  "matplotlib>=3.6"
]

[project.optional-dependencies]
app = ["streamlit>=1.30"]
test = ["pytest>=7.0"]

[project.scripts]
mendelcell = "mendelcell.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mendelcell*"]
